Simplify CI names
Make the CI report more navigable

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,7 @@
 name: CI
+run-name: >
+  CI (${{ github.event_name }})
+  ${{ github.event_name == 'pull_request' && format('PR#{0}', github.event.number) || '' }}
 
 on:
   workflow_dispatch:
@@ -36,13 +39,16 @@ concurrency:
 
 jobs:
   pre-commit:
+    name: pre-commit
     uses: ./.github/workflows/step_pre-commit.yaml
 
   tests:
+    name: test
     needs: [ pre-commit ]
     uses: ./.github/workflows/step_test.yaml
 
   build-wheel:
+    name: build-wheel
     uses: ./.github/workflows/step_build-wheel.yaml
     needs: [ tests ]
     with:
@@ -52,10 +58,12 @@ jobs:
       cibw_build: ${{ inputs.cibw_build || 'cp311-*' }}
 
   test-docs:
+    name: 📘 test-docs
     needs: [ pre-commit ]
     uses: ./.github/workflows/step_test-docs.yaml
 
   pass:
+    name: ✅ Pass
     needs: [ pre-commit, tests, test-docs, build-wheel ]
     runs-on: ubuntu-latest
     steps:
