--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -1,5 +1,4 @@
 name: test
-run-name: Run tests
 
 on:
   workflow_call:
@@ -10,7 +9,11 @@ permissions:
 jobs:
 
   tests:
-    name: Check ${{ matrix.toolchain }} and Python ${{ matrix.python-version }}
+    name: >
+      🖥️ ${{ matrix.os || 'Fedora' }} +
+      ${{ !matrix.os && format('🛠️ {0} +', matrix.toolchain) || '' }}
+      🐍 ${{ matrix.python-version }}
+      ${{ matrix.experimental && '[🧪 Experimental]' || '' }}
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     container: ${{ !matrix.os && 'ghcr.io/lecrisut/dev-env:main' || '' }}
     continue-on-error: ${{ matrix.experimental || false }}
@@ -18,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         toolchain: [ gcc, llvm, intel, windows, macos ]
-        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12" ]
         include:
           - os: windows-2019
             toolchain: windows
@@ -54,7 +57,7 @@ jobs:
         run: git config --system --add safe.directory '*'
       - name: Patch /etc/lsb-release for experimental python
         # Mimic Ubuntu in order to be able to download experimental python
-        run : |
+        run: |
           echo -en 'DISTRIB_ID=Ubuntu\nDISTRIB_RELEASE=22.04\nDISTRIB_CODENAME=jammy\nDISTRIB_DESCRIPTION="Ubuntu 22.04.3 LTS"' >> /etc/lsb-release
         if: ${{ !matrix.os && matrix.experimental }}
       - name: Setup python ${{ matrix.python-version }}
@@ -72,7 +75,7 @@ jobs:
           workflowPreset: "${{ matrix.toolchain }}-ci"
 
   coverage:
-    name: Check ${{ matrix.coverage_api }} API test coverage
+    name: Coverage ${{ matrix.coverage_api }}
     runs-on: ubuntu-latest
     needs: [ tests ]
     strategy:
@@ -102,7 +105,7 @@ jobs:
           verbose: true
 
   coverage-pytest:
-    name: Run python tests with coverage
+    name: Coverage python
     runs-on: ubuntu-latest
     needs: [ tests ]
     steps:
@@ -136,12 +139,3 @@ jobs:
           files: coverage.info,.coverage
           flags: python_api
           verbose: true
-  pass:
-    needs: [ tests, coverage, coverage-pytest ]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check test jobs
-        uses: re-actors/alls-green@release/v1
-        with:
-          jobs: ${{ toJSON(needs) }}
-    if: always()
