--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dynamic = ["version"]
 dependencies = [
     "numpy>=1.20",
     "typing-extensions; python_version<'3.9'",
+    "importlib-resources; python_version<'3.10'",
 ]
 authors = [
     {name="Atsushi Togo", email="atz.togo@gmail.com"},
