--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,5 +9,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3"
+  jobs:
+    post_create_environment:
+      - pip install --pre --upgrade sphinx-book-theme
 sphinx:
   configuration: doc/conf.py
