--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,24 @@ maintainers = [
     {name="Cristian Le", email="git@lecris.dev"},
     {name="Kohei Shinohara", email="kshinohara0508@gmail.com"},
 ]
+classifiers = [
+    "Topic :: Scientific/Engineering :: Physics",
+    "Intended Audience :: Science/Research",
+    "Programming Language :: C",
+    "Operating System :: Unix",
+    "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: C",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Development Status :: 5 - Production/Stable",
+]
 
 [project.urls]
 homepage = "https://spglib.readthedocs.io/"
