--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,8 @@
 configure_file(version.h.in version.h)
+set_property(DIRECTORY APPEND PROPERTY
+		CMAKE_CONFIGURE_DEPENDS ${PROJECT_BINARY_DIR}/.git_commit
+)
+add_dependencies(Spglib_symspg Spglib_GitHash)
 
 # Add compiler warnings
 if (SPGLIB_COMPILATION_WARNING)
