--- a/src/version.h.in
+++ b/src/version.h.in
@@ -38,5 +38,8 @@
 #define SPGLIB_MAJOR_VERSION @Spglib_VERSION_MAJOR@
 #define SPGLIB_MINOR_VERSION @Spglib_VERSION_MINOR@
 #define SPGLIB_MICRO_VERSION @Spglib_VERSION_PATCH@
+#define SPGLIB_VERSION "@Spglib_VERSION@"
+#define SPGLIB_VERSION_FULL "@Spglib_VERSION_FULL@"
+#define SPGLIB_COMMIT "@Spglib_COMMIT@"
 
 #endif
