Add mypy checks
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,13 @@ repos:
       - id: ruff
         args: [ "--fix", "--show-fixes" ]
       - id: ruff-format
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+    - id: mypy
+      pass_filenames: false
+      additional_dependencies:
+        - types-PyYAML
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.16
     hooks:
