--- a/.packit.yaml
+++ b/.packit.yaml
@@ -5,20 +5,13 @@ specfile_path: .distro/spglib.spec
 
 # add or remove files that should be synced
 files_to_sync:
-  - src: .distro/spglib.spec
-    dest: spglib.spec
-  - .packit.yaml
-  - src: .distro/spglib.rpmlintrc
-    dest: spglib.rpmlintrc
-  # tmt setup
-  - src: .distro/.fmf/
-    dest: .fmf/
-  - src: .distro/plans/
-    dest: plans/
+  - src: .distro/
+    dest: ./
     filters:
-      - "- main.fmf.dist-git"
-      - "- rpminspect.fmf"
-      - "- rpmlint.fmf"
+      - "- plans/main.fmf.dist-git"
+      - "- plans/rpminspect.fmf"
+      - "- plans/rpmlint.fmf"
+  - .packit.yaml
   - src: .distro/plans/main.fmf.dist-git
     dest: plans/main.fmf
 upstream_package_name: spglib
@@ -36,22 +29,13 @@ jobs:
     additional_repos:
       - copr://@scikit-build/release
     targets:
-      # TODO: Switch to fedora-all once F37 support is dropped
-      - fedora-development-x86_64
-      - fedora-latest-x86_64
-      - fedora-latest-stable-x86_64
-      - fedora-development-aarch64
-      - fedora-latest-aarch64
-      - fedora-latest-stable-aarch64
+      - fedora-all-x86_64
+      - fedora-all-aarch64
   - job: tests
     trigger: pull_request
     targets:
-      - fedora-development-x86_64
-      - fedora-latest-x86_64
-      - fedora-latest-stable-x86_64
-      - fedora-development-aarch64
-      - fedora-latest-aarch64
-      - fedora-latest-stable-aarch64
+      - fedora-all-x86_64
+      - fedora-all-aarch64
     fmf_path: .distro
   - job: copr_build
     trigger: commit
@@ -61,33 +45,21 @@ jobs:
     additional_repos:
       - copr://@scikit-build/release
     targets:
-      - fedora-development-x86_64
-      - fedora-latest-x86_64
-      - fedora-latest-stable-x86_64
-      - fedora-development-aarch64
-      - fedora-latest-aarch64
-      - fedora-latest-stable-aarch64
+      - fedora-all-x86_64
+      - fedora-all-aarch64
   - job: copr_build
     trigger: release
     owner: lecris
     project: release
     targets:
-      - fedora-development-x86_64
-      - fedora-latest-x86_64
-      - fedora-latest-stable-x86_64
-      - fedora-development-aarch64
-      - fedora-latest-aarch64
-      - fedora-latest-stable-aarch64
+      - fedora-all-x86_64
+      - fedora-all-aarch64
   - job: tests
     trigger: commit
     branch: develop
     targets:
-      - fedora-development-x86_64
-      - fedora-latest-x86_64
-      - fedora-latest-stable-x86_64
-      - fedora-development-aarch64
-      - fedora-latest-aarch64
-      - fedora-latest-stable-aarch64
+      - fedora-all-x86_64
+      - fedora-all-aarch64
     fmf_path: .distro
   - job: propose_downstream
     trigger: release
