--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,3 +69,10 @@ repos:
     hooks:
       - id: fprettify
         args: [ '-i', '4' ]
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: "v2.2.6"
+    hooks:
+      - id: codespell
+        additional_dependencies:
+          - tomli
