--- a/pyproject.toml
+++ b/pyproject.toml
@@ -197,3 +197,7 @@ show_error_codes = true
 # strict = true
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 no_strict_optional = true
+
+[tool.codespell]
+ignore-words = "doc/codespell.txt"
+skip = "doc/references.bib"
