Fix spelling issues
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ if (POLICY CMP0140)
 endif ()
 
 #[==============================================================================================[
-#                                    Basic project defintion                                    #
+#                                    Basic project definition                                   #
 ]==============================================================================================]
 
 project(Spglib
