--- a/.github/workflows/step_test-docs.yaml
+++ b/.github/workflows/step_test-docs.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Install the project and docs dependencies
         # TODO: Switch to editable install
         run: pip install .[docs]
+        # https://bitbucket.org/pybtex-devs/pybtex/issues/169/replace-pkg_resources-with
+      - name: Temporary workaround for pybtex
+        run: pip install setuptools
       - name: Run sphinx builder ${{ matrix.builder }}
         # TODO: Sphinx convention is to use `docs` instead of `doc`
         run: sphinx-build -b ${{ matrix.builder }} ${{ matrix.args }} ./doc ./doc/_build
