--- a/test/functional/fortran/CMakeLists.txt
+++ b/test/functional/fortran/CMakeLists.txt
@@ -1,11 +1,16 @@
-list(APPEND ctest_labels fortran_api)
+set_property(DIRECTORY APPEND
+		PROPERTY LABELS fortran_api
+)
 
 # Cannot use native googletest. Using a rudimentary ctest native testing suite
-add_library(test_utils STATIC utils.F90 c_interface_module.F90)
+target_sources(Spglib_Fortran_tests PRIVATE
+		utils.F90
+		c_interface_module.F90
+)
 
 # Generated ctest file that switches and displays tests
 # Note must be plain C because generated CPP file does not include extern "C"
-set(TestsDriver fortran_test.c)
+# TODO: Gather subtests via regex analyzing sources
 set(SubTests_test_fortran_spg_get_symmetry
 		test_rutile112
 		test_zincblende
@@ -33,7 +38,7 @@ set(SubTests_test_fortran_spg_get_symmetry_with_site_tensors
 
 # Add fortran tests here
 create_test_sourcelist(FortranTests_Files
-		${TestsDriver}
+		fortran_test.c
 		test_fortran_spg_get_spacegroup_type.F90
 		test_fortran_spg_get_dataset.F90
 		test_fortran_spg_get_magnetic_spacegroup_type.F90
@@ -43,44 +48,39 @@ create_test_sourcelist(FortranTests_Files
 		test_fortran_spg_refine_cell.F90
 		test_fortran_version.F90
 )
-# Define any subtests (would be nice to auto-detect them like Catch2)
 
-
-add_executable(FortranTests ${FortranTests_Files})
-target_link_libraries(FortranTests PRIVATE test_utils Spglib_fortran)
-if (CMAKE_Fortran_COMPILER_ID MATCHES "Intel.*")
-	target_link_options(FortranTests PRIVATE
-			"$<$<COMPILE_LANGUAGE:Fortran>:-nofor-main>")
-endif ()
-target_compile_definitions(FortranTests PRIVATE
+list(REMOVE_ITEM FortranTests_Files fortran_test.c)
+target_sources(Spglib_Fortran_tests PRIVATE
+		${CMAKE_CURRENT_BINARY_DIR}/fortran_test.c
+		${FortranTests_Files}
+)
+target_link_libraries(Spglib_Fortran_tests PRIVATE Spglib::fortran)
+target_link_options(Spglib_Fortran_tests PRIVATE
+		"$<$<Fortran_COMPILER_ID:Intel,IntelLLVM>:$<$<COMPILE_LANGUAGE:Fortran>:-nofor-main>>")
+target_compile_definitions(Spglib_Fortran_tests PRIVATE
 		Spglib_VERSION=${Spglib_VERSION}
 		Spglib_VERSION_FULL=${Spglib_VERSION_FULL}
 		Spglib_COMMIT=${Spglib_COMMIT}
 )
 
-# Remove the driver executable from the list for add_test
-set(TestsToRun ${FortranTests_Files})
-list(REMOVE_ITEM TestsToRun ${TestsDriver})
-
 # Loop over all main tests files
-foreach (test ${TestsToRun})
+foreach (test IN LISTS FortranTests_Files)
+	# TODO: CMake 3.20 Switch to cmake_path
 	get_filename_component(test_name ${test} NAME_WE)
 	# Check if we have subtests defined
 	if (DEFINED SubTests_${test_name})
 		# Loop over all subtests
 		foreach (subtest ${SubTests_${test_name}})
-			# Call test via ${FortranTests_Executable} ${test_name} ${subtest}
-			# E.g. running manually: ./FortranTests_Executable test_fortran_spg_get_symmetry test_rutile112
+			# Call test via ${Spglib_Fortran_tests} ${test_name} ${subtest}
+			# E.g. running manually: ./test_suite_fortran test_fortran_spg_get_symmetry test_rutile112
 			add_test(NAME "${test_name}.${subtest}"
-					COMMAND $<TARGET_FILE:FortranTests> ${test_name} ${subtest})
-			set_tests_properties("${test_name}.${subtest}" PROPERTIES
-					LABELS "${ctest_labels}")
+					COMMAND $<TARGET_FILE:Spglib_Fortran_tests> ${test_name} ${subtest}
+			)
 		endforeach ()
 	else ()
 		# Only run the main test without arguments. Maybe can pass other variable data though :-?
 		add_test(NAME ${test_name}
-				COMMAND $<TARGET_FILE:FortranTests> ${test_name})
-		set_tests_properties(${test_name} PROPERTIES
-				LABELS "${ctest_labels}")
+				COMMAND $<TARGET_FILE:Spglib_Fortran_tests> ${test_name}
+		)
 	endif ()
 endforeach ()
