--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -1,8 +1,5 @@
-list(APPEND ctest_labels integration_tests)
-set(test_sources "")
-if (test_sources)
-	configure_spglib_tests(TARGET Spglib_tests
-			SOURCES ${test_sources}
-			LABELS ${ctest_labels}
-			)
-endif ()
+set_property(DIRECTORY APPEND
+		PROPERTY LABELS integration_tests
+)
+#Spglib_add_gtest(TARGET Spglib_tests SOURCES
+#)
