--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,5 +1,8 @@
-list(APPEND ctest_labels unit_tests)
-set(test_sources
+set_property(DIRECTORY APPEND
+		PROPERTY LABELS unit_tests
+)
+
+Spglib_add_gtest(TARGET Spglib_tests SOURCES
 		test_dataset_access.cpp
 		test_error.cpp
 		test_version.cpp
@@ -9,9 +12,3 @@ target_compile_definitions(Spglib_tests PRIVATE
 		Spglib_VERSION_FULL=${Spglib_VERSION_FULL}
 		Spglib_COMMIT=${Spglib_COMMIT}
 )
-if (test_sources)
-	configure_spglib_tests(TARGET Spglib_tests
-			SOURCES ${test_sources}
-			LABELS ${ctest_labels}
-			)
-endif ()
