--- a/fortran/spglib_version.f90.in
+++ b/fortran/spglib_version.f90.in
@@ -2,7 +2,7 @@ module spglib_version
     implicit none
     private
 
-    character(*), public, parameter :: version = "@Spglib_VERSION@"
-    character(*), public, parameter :: version_full = "@Spglib_VERSION_FULL@"
-    character(*), public, parameter :: commit = "@Spglib_COMMIT@"
+    character(*), public, parameter :: version = "@Spglib_Fortran_VERSION@"
+    character(*), public, parameter :: version_full = "@Spglib_Fortran_VERSION_FULL@"
+    character(*), public, parameter :: commit = "@Spglib_Fortran_COMMIT@"
 end module spglib_version
